--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Momentum</title>
 </head>
 <body>
-    
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+  crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- <script src='main.js'></script>  -->
+    <script src='weather.js'></script>
 </body>
 </html>
